--- a/UptickBidAPI/app/views/index.scala.html
+++ b/UptickBidAPI/app/views/index.scala.html
@@ -6,6 +6,15 @@
     <meta charset="utf-8">
     <title>Play REST API</title>
   </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113943693-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113943693-1');
+</script>
 
   <body>
     <h1>Play REST API</h1>
